create list post on userpage

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,7 +19,7 @@ AllCops:
     - 'spec/**/*'
     - 'script/rails'
     - 'config/**/*'
-    - 'test/*'
+    - 'test/**/*'
 
 # Indent private/protected/public as deep as method definitions
 Layout/AccessModifierIndentation:
