--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,7 @@ user:
     min_pass_length: 6
   gravatar_size: 80
   gravatar_size_small: 50
+  gravatar_post_size: 42
   gender:
     male: "Male"
     female: "Female"
@@ -14,3 +15,7 @@ remember_box:
   is_checked: "1"
 list_user:
   num_user_per_page: "6"
+num_user_per_page: "6"
+num_feeds_per_page: "6"
+reaction_type:
+  like: 1
