--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,7 +1,16 @@
+en: "en"
+vi: "vi"
 user:
   validates:
     max_name_length: 30
     max_email_length: 30
     min_pass_length: 6
-en: "en"
-vi: "vi"
+  gravatar_size: 80
+  gravatar_size_small: 50
+  gender:
+    male: "Male"
+    female: "Female"
+remember_box:
+  is_checked: "1"
+list_user:
+  num_user_per_page: "6"
