--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,25 +1,18 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  username: <mysql_user_name>
+  password: <mysql_user_password>
+  socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+  database: <db_name>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  host: <db_server_IP>
+  username: <mysql_user_name>
+  password: <mysql_user_password>
+  database: <db_name>
